tests/rascal/negative/name_errors/L3/7_undef-proc.ob
MODULE Bla;




BEGIN
  F
END Bla.